chore(helm): support image pullSecrets for hcm (#608) (merge request !875)
Squash merge branch 'bcc-helm-pull-secret' into 'feature-ziyan'

TAPD: --story=116373396

--- a/docs/support-file/helm/templates/apiserver/deployment.yaml
+++ b/docs/support-file/helm/templates/apiserver/deployment.yaml
@@ -34,6 +34,10 @@ spec:
       tolerations:
         {{ toYaml . | indent 8 }}
       {{- end }}
+      {{- with .Values.image.pullSecrets }}
+      imagePullSecrets:
+          {{- toYaml . |nindent 8 }}
+      {{- end }}
       initContainers:
         {{- include "bk-hcm.wait-for-pod-init-container" (list . (printf "%s-cloudserver" (include "bk-hcm.fullname" .)) "-lcomponent=cloudserver") | nindent 8 }}
       containers:
