--- a/docs/support-file/helm/templates/authserver/deployment.yaml
+++ b/docs/support-file/helm/templates/authserver/deployment.yaml
@@ -34,6 +34,10 @@ spec:
       tolerations:
         {{ toYaml . | indent 8 }}
       {{- end }}
+      {{- with .Values.image.pullSecrets }}
+      imagePullSecrets:
+          {{- toYaml . |nindent 8 }}
+      {{- end }}
       initContainers:
         {{- include "bk-hcm.wait-for-pod-init-container" (list . (printf "%s-dataservice" (include "bk-hcm.fullname" .)) "-lcomponent=dataservice") | nindent 8 }}
       containers:
