--- a/docs/api-docs/api-server/api/bk_apigw_resources_bk-hcm.yaml
+++ b/docs/api-docs/api-server/api/bk_apigw_resources_bk-hcm.yaml
@@ -107,3 +107,390 @@ paths:
           userVerifiedRequired: true
         disabledStages: []
         descriptionEn:
+  /api/v1/task/get_biz_recycle_order:
+    post:
+      operationId: scr_list_biz_recycle_order
+      description: 查询业务的资源回收历史单据信息
+      tags:
+        - SCR
+        - Recycle
+      responses:
+        default:
+          description: ''
+      x-bk-apigateway-resource:
+        isPublic: true
+        allowApplyPermission: false
+        matchSubpath: false
+        backend:
+          type: HTTP
+          method: post
+          path: /api/v1/woa/task/findmany/biz/recycle/order
+          matchSubpath: false
+          timeout: 0
+          upstreams: {}
+          transformHeaders: {}
+        authConfig:
+          userVerifiedRequired: true
+        disabledStages: []
+        descriptionEn:
+  /api/v1/task/get_biz_apply_order:
+    post:
+      operationId: scr_list_biz_apply_order
+      description: 查询业务的资源申请历史单据信息
+      tags:
+        - Apply
+      responses:
+        default:
+          description: ''
+      x-bk-apigateway-resource:
+        isPublic: true
+        allowApplyPermission: false
+        matchSubpath: false
+        backend:
+          type: HTTP
+          method: post
+          path: /api/v1/woa/task/findmany/biz/apply
+          matchSubpath: false
+          timeout: 0
+          upstreams: {}
+          transformHeaders: {}
+        authConfig:
+          userVerifiedRequired: true
+        disabledStages: []
+        descriptionEn:
+  /api/v1/pool/get_idle_host:
+    post:
+      operationId: scr_list_pool_idle_host
+      description: 查询资源池空闲设备
+      tags:
+        - Pool
+      responses:
+        default:
+          description: ''
+      x-bk-apigateway-resource:
+        isPublic: true
+        allowApplyPermission: false
+        matchSubpath: false
+        backend:
+          type: HTTP
+          method: post
+          path: /api/v1/woa/pool/findmany/idle/host
+          matchSubpath: false
+          timeout: 0
+          upstreams: {}
+          transformHeaders: {}
+        authConfig:
+          userVerifiedRequired: true
+        disabledStages: []
+        descriptionEn:
+  /api/v1/pool/get_recall_host:
+    post:
+      operationId: scr_list_pool_recall_host
+      description: 查询资源池已下架设备
+      tags:
+        - Pool
+      responses:
+        default:
+          description: ''
+      x-bk-apigateway-resource:
+        isPublic: true
+        allowApplyPermission: false
+        matchSubpath: false
+        backend:
+          type: HTTP
+          method: post
+          path: /api/v1/woa/pool/findmany/recall/host
+          matchSubpath: false
+          timeout: 0
+          upstreams: {}
+          transformHeaders: {}
+        authConfig:
+          userVerifiedRequired: true
+        disabledStages: []
+        descriptionEn:
+  /api/v1/pool/get_launch_host:
+    post:
+      operationId: scr_get_pool_launch_host
+      description: 查询资源池已上架设备
+      tags:
+        - SCR
+        - Launch
+      responses:
+        default:
+          description: ''
+      x-bk-apigateway-resource:
+        isPublic: true
+        allowApplyPermission: false
+        matchSubpath: false
+        backend:
+          type: HTTP
+          method: post
+          path: /api/v1/woa/pool/findmany/launch/host
+          matchSubpath: false
+          timeout: 0
+          upstreams: {}
+          transformHeaders: {}
+        authConfig:
+          userVerifiedRequired: true
+        disabledStages: []
+        descriptionEn:
+  /api/v1/pool/get_recall_task:
+    post:
+      operationId: scr_list_pool_recall_task
+      description: 查询资源池下架任务
+      tags:
+        - SCR
+        - Recall
+      responses:
+        default:
+          description: ''
+      x-bk-apigateway-resource:
+        isPublic: true
+        allowApplyPermission: false
+        matchSubpath: false
+        backend:
+          type: HTTP
+          method: post
+          path: /api/v1/woa/pool/findmany/recall/task
+          matchSubpath: false
+          timeout: 0
+          upstreams: {}
+          transformHeaders: {}
+        authConfig:
+          userVerifiedRequired: true
+        disabledStages: []
+        descriptionEn:
+  /api/v1/pool/get_launch_task:
+    post:
+      operationId: scr_list_pool_launch_task
+      description: 查询资源池上架任务
+      tags:
+        - SCR
+        - Launch
+      responses:
+        default:
+          description: ''
+      x-bk-apigateway-resource:
+        isPublic: true
+        allowApplyPermission: false
+        matchSubpath: false
+        backend:
+          type: HTTP
+          method: post
+          path: /api/v1/woa/pool/findmany/launch/task
+          matchSubpath: false
+          timeout: 0
+          upstreams: {}
+          transformHeaders: {}
+        authConfig:
+          userVerifiedRequired: true
+        disabledStages: []
+        descriptionEn:
+  /api/v1/pool/return_host:
+    post:
+      operationId: scr_update_pool_return_host
+      description: 归还资源池设备
+      tags:
+        - SCR
+        - Return
+      responses:
+        default:
+          description: ''
+      x-bk-apigateway-resource:
+        isPublic: true
+        allowApplyPermission: false
+        matchSubpath: false
+        backend:
+          type: HTTP
+          method: post
+          path: /api/v1/woa/pool/return/host
+          matchSubpath: false
+          timeout: 0
+          upstreams: {}
+          transformHeaders: {}
+        authConfig:
+          userVerifiedRequired: true
+        disabledStages: []
+        descriptionEn:
+  /api/v1/pool/draw_host:
+    post:
+      operationId: scr_update_pool_draw_host
+      description: 资源池设备提取
+      tags:
+        - SCR
+        - Draw
+      responses:
+        default:
+          description: ''
+      x-bk-apigateway-resource:
+        isPublic: true
+        allowApplyPermission: false
+        matchSubpath: false
+        backend:
+          type: HTTP
+          method: post
+          path: /api/v1/woa/pool/draw/host
+          matchSubpath: false
+          timeout: 0
+          upstreams: {}
+          transformHeaders: {}
+        authConfig:
+          userVerifiedRequired: true
+        disabledStages: []
+        descriptionEn:
+  /api/v1/task/get_apply_ticket:
+    post:
+      operationId: scr_get_ticket_apply_by_orderid
+      description: 资源申请单据信息查询
+      tags:
+        - SCR
+        - Apply
+      responses:
+        default:
+          description: ''
+      x-bk-apigateway-resource:
+        isPublic: true
+        allowApplyPermission: false
+        matchSubpath: false
+        backend:
+          type: HTTP
+          method: post
+          path: /api/v1/woa/task/get/apply/ticket
+          matchSubpath: false
+          timeout: 0
+          upstreams: {}
+          transformHeaders: {}
+        authConfig:
+          userVerifiedRequired: true
+        disabledStages: []
+        descriptionEn:
+  /api/v1/task/create_recycle:
+    post:
+      operationId: scr_create_recycle_order
+      description: 创建资源回收单据
+      tags:
+        - SCR
+        - Recycle
+      responses:
+        default:
+          description: ''
+      x-bk-apigateway-resource:
+        isPublic: true
+        allowApplyPermission: false
+        matchSubpath: false
+        backend:
+          type: HTTP
+          method: post
+          path: /api/v1/woa/task/create/recycle/order
+          matchSubpath: false
+          timeout: 0
+          upstreams: {}
+          transformHeaders: {}
+        authConfig:
+          userVerifiedRequired: true
+        disabledStages: []
+        descriptionEn:
+  /api/v1/task/get_apply_device:
+    post:
+      operationId: scr_list_apply_device
+      description: 资源申请已交付机器列表查询
+      tags:
+        - SCR
+        - Apply
+      responses:
+        default:
+          description: ''
+      x-bk-apigateway-resource:
+        isPublic: true
+        allowApplyPermission: false
+        matchSubpath: false
+        backend:
+          type: HTTP
+          method: post
+          path: /api/v1/woa/task/findmany/apply/deliver/device
+          matchSubpath: false
+          timeout: 0
+          upstreams: {}
+          transformHeaders: {}
+        authConfig:
+          userVerifiedRequired: true
+        disabledStages: []
+        descriptionEn:
+  /api/v1/task/get_apply_status/{order_id}:
+    get:
+      operationId: scr_get_ticket_apply_status
+      description: 资源申请单据状态查询
+      tags:
+        - SCR
+        - Apply
+      responses:
+        default:
+          description: ''
+      x-bk-apigateway-resource:
+        isPublic: true
+        allowApplyPermission: false
+        matchSubpath: false
+        backend:
+          type: HTTP
+          method: get
+          path: /api/v1/woa/task/find/apply/status/{order_id}
+          matchSubpath: false
+          timeout: 0
+          upstreams: {}
+          transformHeaders: {}
+        authConfig:
+          userVerifiedRequired: true
+        disabledStages: []
+        descriptionEn:
+  /api/v1/task/create_apply:
+    post:
+      operationId: scr_create_ticket_apply
+      description: 创建资源申请单据
+      tags:
+        - SCR
+        - Apply
+      responses:
+        default:
+          description: ''
+      x-bk-apigateway-resource:
+        isPublic: true
+        allowApplyPermission: false
+        matchSubpath: false
+        backend:
+          type: HTTP
+          method: post
+          path: /api/v1/woa/task/create/apply
+          matchSubpath: false
+          timeout: 0
+          upstreams: {}
+          transformHeaders: {}
+        authConfig:
+          userVerifiedRequired: true
+        disabledStages: []
+        descriptionEn:
+  /api/v1/config/get_cvm_capacity:
+    post:
+      operationId: scr_list_cvm_capacity
+      description: CVM资源最大可申请量查询
+      tags:
+        - SCR
+        - Apply
+      responses:
+        default:
+          description: ''
+      x-bk-apigateway-resource:
+        isPublic: true
+        allowApplyPermission: false
+        matchSubpath: false
+        backend:
+          type: HTTP
+          method: post
+          path: /api/v1/woa/config/find/cvm/capacity
+          matchSubpath: false
+          timeout: 0
+          upstreams: {}
+          transformHeaders: {}
+        authConfig:
+          userVerifiedRequired: true
+        disabledStages: []
+        descriptionEn:
