feat: 提交woa-server的helm等配置及部分接口文档 (merge request !914)
Squash merge branch 'local-bcc-feature-scr-task-0525-helm' into 'bcc/feature-scr'
feat: 提交woa-server的helm等配置及部分接口文档

--story=117447615


TAPD: --story=117447615

--- a/docs/support-file/helm/templates/bklogconfig.yaml
+++ b/docs/support-file/helm/templates/bklogconfig.yaml
@@ -20,6 +20,8 @@ spec:
     - {{ .Values.dataservice.log.logDir }}/*
     - {{ .Values.hcservice.log.logDir }}/*
     - {{ .Values.cloudserver.log.logDir }}/*
+    - {{ .Values.taskserver.log.logDir }}/*
+    - {{ .Values.woaserver.log.logDir }}/*
 {{- end }}
 {{- if .Values.bkLogConfig.std.enabled }}
 ---
