--- a/cmd/woa-server/etc/woa_server.yaml
+++ b/cmd/woa-server/etc/woa_server.yaml
@@ -66,7 +66,7 @@ log:
 esb:
   # endpoints is a seed list of host:port addresses of esb nodes.
   endpoints:
-    - http://paas.bk.com
+    - http://paas.bk.com/
   # appCode is the BlueKing app code of hcm to request esb.
   appCode: hcm
   # appSecret is the BlueKing app secret of hcm to request esb.
@@ -117,7 +117,7 @@ redis:
   database: "0"
   maxOpenConns: 3000
   maxIdleConns: 100
-  masterName: mymaster
+  masterName:
 
 cvm:
   host: http://127.0.0.1
