--- a/cmd/woa-server/etc/woa_server.yaml
+++ b/cmd/woa-server/etc/woa_server.yaml
@@ -194,6 +194,38 @@ dvm:
   secret_key: test
   operator: admin
 
+# defines itsm related settings.
+itsm:
+  # endpoints is a seed list of host:port addresses of itsm api gateway nodes.
+  endpoints:
+    - http://127.0.0.1
+  # appCode is the BlueKing app code of hcm to request itsm api gateway.
+  appCode: test
+  # appSecret is the BlueKing app secret of hcm to request itsm api gateway.
+  appSecret: test
+  # user is the BlueKing user of hcm to request itsm api gateway.
+  user: admin
+  # bkTicket is the BlueKing access ticket of hcm to request itsm api gateway.
+  bkTicket:
+  # bkToken is the BlueKing access token of hcm to request itsm api gateway.
+  bkToken:
+  # serviceID is the service id of hcm to request itsm api gateway.
+  serviceID: 100
+  # applyLinkFormat is the format of the apply link.
+  applyLinkFormat: http://www.test.com/#/service/apply/records/%d
+  # defines tls related options.
+  tls:
+    # server should be accessed without verifying the TLS certificate.
+    insecureSkipVerify:
+    # server requires TLS client certificate authentication.
+    certFile:
+    # server requires TLS client certificate authentication.
+    keyFile:
+    # trusted root certificates for server.
+    caFile:
+    # the password to decrypt the certificate.
+    password:
+
 bkchat:
   host: http://bkchat.ied.com:8000
   notify_format: |
