--- a/front/package.json
+++ b/front/package.json
@@ -65,6 +65,7 @@
     "ipaddr.js": "^2.1.0",
     "js-cookie": "^3.0.1",
     "js-watermarker": "^2.0.2",
+    "less": "^4.2.0",
     "lodash": "^4.17.21",
     "mitt": "^3.0.0",
     "moment": "^2.29.4",
