--- a/front/package.json
+++ b/front/package.json
@@ -60,6 +60,7 @@
     "echarts-wordcloud": "^2.0.0",
     "element-plus": "2.2.11",
     "express-art-template": "^1.0.1",
+    "file-saver": "^2.0.5",
     "helpful-decorators": "^2.1.0",
     "interactjs": "^1.10.17",
     "ipaddr.js": "^2.1.0",
@@ -90,7 +91,8 @@
     "vue-uuid": "^3.0.0",
     "vuedraggable": "^4.1.0",
     "vuex": "^4.0.2",
-    "vuex-module-decorators": "^2.0.0"
+    "vuex-module-decorators": "^2.0.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.3",
