--- a/front/package.json
+++ b/front/package.json
@@ -54,6 +54,7 @@
     "axios": "^1.6.0",
     "bkui-vue": "^1.0.3-beta.67.dialog.3",
     "classnames": "^2.3.1",
+    "clipboard": "^2.0.11",
     "cookie": "^0.5.0",
     "cookie-parser": "^1.4.6",
     "copy-webpack-plugin": "^11.0.0",
