--- a/front/package.json
+++ b/front/package.json
@@ -86,6 +86,7 @@
     "tvision-color": "^1.4.0",
     "uuid": "^9.0.0",
     "vue": "^3.2.37",
+    "vue-clipboard3": "^2.0.0",
     "vue-draggable-plus": "^0.2.6",
     "vue-facing-decorator": "^2.1.3",
     "vue-grid-layout-next": "^0.0.5",
