feat: useTable改造  --story=117820135 (merge request !961)
Squash merge branch 'bcc/feat-scr-resource-manage' into 'bcc/feature-scr'
feat: useTable改造  --story=117820135

TAPD: --story=117820135

--- a/front/tsconfig.json
+++ b/front/tsconfig.json
@@ -36,7 +36,8 @@
       "@datasource/*": ["./src/plugins/datasource/*"],
       "@dashboard/*": ["./src/plugins/dashboard/*"],
       "@modules/*": ["./src/store/modules/*"],
-      "@api/*": ["./src/api/modules/*"]
+      "@api/*": ["./src/api/modules/*"],
+      "@pluginHandler/*": ["./src/plugin-handler/*"]
     }
   },
  /* "typeRoots": [                            *//* 要包含的类型声明文件路径列表*//*
