feat:添加裁撤服务相关功能 (merge request !1059)
Squash merge branch 'bcc/feature-scr' into 'bcc/feature-scr'
--story=117447566

--- a/docs/support-file/helm/values.yaml
+++ b/docs/support-file/helm/values.yaml
@@ -754,3 +754,13 @@ egress:
     - 11.0.0.0/8
     - 30.0.0.0/8
   yuntiDomain: ""
+
+resourceDissolve:
+  originDate: "20240105"
+
+elasticsearch:
+  url:
+  user:
+  password:
+
+blacklist:
