--- a/cmd/woa-server/etc/woa_server.yaml
+++ b/cmd/woa-server/etc/woa_server.yaml
@@ -295,4 +295,24 @@ bkchat:
      备注：%s
      资源申请单链接：http://scrtest.ied.com/#/cr/service/apply/records/%d
 
+resourceDissolve:
+  originDate: "20240105"
 
+elasticsearch:
+  url: 127.0.0.1:9200
+  user: hcm
+  password: hcm
+  # defines tls related options.
+  tls:
+    # server should be accessed without verifying the TLS certificate.
+    insecureSkipVerify:
+    # server requires TLS client certificate authentication.
+    certFile:
+    # server requires TLS client certificate authentication.
+    keyFile:
+    # trusted root certificates for server.
+    caFile:
+    # the password to decrypt the certificate.
+    password:
+
+blacklist:
