--- a/docs/support-file/helm/templates/woaserver/configmap.yaml
+++ b/docs/support-file/helm/templates/woaserver/configmap.yaml
@@ -75,3 +75,23 @@ data:
       {{- toYaml .Values.itsm | nindent 6 }}
     itsmFlows:
       {{- toYaml .Values.itsmFlows | nindent 6 }}
+    resourceDissolve:
+      originDate: {{ .Values.resourceDissolve.originDate }}
+    elasticsearch:
+      url: {{ .Values.elasticsearch.url }}
+      user: {{ .Values.elasticsearch.user }}
+      password: {{ .Values.elasticsearch.password }}
+      # defines tls related options.
+      tls:
+        # server should be accessed without verifying the TLS certificate.
+        insecureSkipVerify:
+        # server requires TLS client certificate authentication.
+        certFile:
+        # server requires TLS client certificate authentication.
+        keyFile:
+        # trusted root certificates for server.
+        caFile:
+        # the password to decrypt the certificate.
+        password:
+    blacklist: {{ .Values.blacklist }}
+
