--- a/cmd/hc-service/etc/hc_service.yaml
+++ b/cmd/hc-service/etc/hc_service.yaml
@@ -61,3 +61,28 @@ log:
   alsoToStdErr: false
   # log level.
   verbosity: 0
+
+
+# defines esb related settings. 内部版用于调用cc获取clb业务信息
+esb:
+  # endpoints is a seed list of host:port addresses of esb nodes.
+  endpoints:
+    - http://paas.bk.com
+  # appCode is the BlueKing app code of hcm to request esb.
+  appCode:
+  # appSecret is the BlueKing app secret of hcm to request esb.
+  appSecret:
+  # user is the BlueKing user of hcm to request esb.
+  user: admin
+  # defines tls related options.
+  tls:
+    # server should be accessed without verifying the TLS certificate.
+    insecureSkipVerify:
+    # server requires TLS client certificate authentication.
+    certFile:
+    # server requires TLS client certificate authentication.
+    keyFile:
+    # trusted root certificates for server.
+    caFile:
+    # the password to decrypt the certificate.
+    password:
