--- a/docs/support-file/helm/Chart.yaml
+++ b/docs/support-file/helm/Chart.yaml
@@ -1,9 +1,9 @@
-name: bk-hcm
+name: bk-hcm-oa
 apiVersion: v2
 description: A full stack chart for HCM Enterprise products.
 type: application
 version: 1.0.15
-appVersion: 1.4.0
+appVersion: 1.5.1-alpha.3
 
 dependencies:
   - name: common
