--- a/docs/support-file/helm/templates/woaserver/configmap.yaml
+++ b/docs/support-file/helm/templates/woaserver/configmap.yaml
@@ -19,6 +19,8 @@ data:
         {{- include "common.tplvalues.render" (dict "value" (include "bk-hcm.etcdConfig" .) "context" $) | nindent 8 }}
     log:
       {{- toYaml .Values.woaserver.log | nindent 6 }}
+    database:
+      {{- include "common.tplvalues.render" (dict "value" (include "bk-hcm.databaseConfig" .) "context" $) | nindent 6 }}
     esb:
       endpoints:
         - {{ .Values.bkComponentApiUrl }}
