--- a/docs/support-file/helm/values.yaml
+++ b/docs/support-file/helm/values.yaml
@@ -9,10 +9,11 @@ global:
 
 # configuration of hcm image registry, use global imageRegistry/imagePullPolicy if unset
 image:
-  registry: hub.bktencent.com
+  # 制品库旧域名，具体新域名为内部域名
+  registry: docker-repo.bk.tencent.com/bk-hcm/oa-image
   pullPolicy: IfNotPresent
   pullSecrets: []
-  tag: 1.3.3
+  tag: 1.5.1-alpha.3
 
 serviceAccount:
   create: true
@@ -45,7 +46,7 @@ apiserver:
   ## 镜像
   ##
   image:
-    repository: blueking/bk-hcm-apiserver
+    repository: bk-hcm-apiserver-oa
     tag:
   ## 日志配置
   ##
@@ -92,7 +93,7 @@ authserver:
   ## 镜像
   ##
   image:
-    repository: blueking/bk-hcm-authserver
+    repository: bk-hcm-authserver-oa
     tag:
   ## 日志配置
   ##
@@ -134,7 +135,7 @@ cloudserver:
   ## 镜像
   ##
   image:
-    repository: blueking/bk-hcm-cloudserver
+    repository: bk-hcm-cloudserver-oa
     tag:
   ## 日志配置
   ##
@@ -281,7 +282,7 @@ dataservice:
   ## 镜像
   ##
   image:
-    repository: blueking/bk-hcm-dataservice
+    repository: bk-hcm-dataservice-oa
     tag:
   ## 日志配置
   ##
@@ -322,7 +323,7 @@ hcservice:
   ## 镜像
   ##
   image:
-    repository: blueking/bk-hcm-hcservice
+    repository: bk-hcm-hcservice-oa
     tag: 
   ## 日志配置
   ##
@@ -363,7 +364,7 @@ webserver:
   ## 镜像
   ##
   image:
-    repository: blueking/bk-hcm-webserver
+    repository: bk-hcm-webserver-oa
     tag:
   ## 日志配置
   ##
@@ -405,7 +406,7 @@ taskserver:
   ## 镜像
   ##
   image:
-    repository: blueking/bk-hcm-taskserver
+    repository: bk-hcm-taskserver-oa
     tag:
   ## 日志配置
   ##
@@ -470,7 +471,7 @@ woaserver:
   ## 镜像
   ##
   image:
-    repository: blueking/bk-hcm-woaserver
+    repository: bk-hcm-woaserver-oa
     tag:
   ## 日志配置
   ##
@@ -551,7 +552,7 @@ crypto:
 apigwSync:
   enabled: true
   image:
-    repository: blueking/bk-hcm-apigwsync
+    repository: bk-hcm-apigwsync
     tag: 1.0.2
   ## 需注册的网关名
   apigwName: "bk-hcm"
