feat_helm (merge request !1030)
Squash merge branch 'feat_helm' into 'bcc/feature-plan'
feat: update woaserver helm template to support itsm flows.

--- a/docs/support-file/helm/templates/woaserver/configmap.yaml
+++ b/docs/support-file/helm/templates/woaserver/configmap.yaml
@@ -71,3 +71,7 @@ data:
       {{- toYaml .Values.dvm | nindent 6 }}
     bkchat:
       {{- toYaml .Values.bkchat | nindent 6 }}
+    itsm:
+      {{- toYaml .Values.itsm | nindent 6 }}
+    itsmFlows:
+      {{- toYaml .Values.itsmFlows | nindent 6 }}
