feat: 增加Mongo配置开关，防止多套测试环境同时消费 (merge request !1139)
Squash merge branch 'local-bcc-feature-scr-mongo-switch-0624-1' into 'bcc/feature-scr'
feat: 增加Mongo配置开关，防止多套测试环境同时消费

--story=117857385


TAPD: --story=117857385

--- a/cmd/woa-server/etc/woa_server.yaml
+++ b/cmd/woa-server/etc/woa_server.yaml
@@ -127,6 +127,8 @@ esb:
     # the password to decrypt the certificate.
     password:
 
+useMongo: true
+
 mongodb:
   host: 127.0.0.1:27017
   port: 27017
