feat: 新增ESB正式环境的配置 (merge request !1203)
Squash merge branch 'local-bcc-feature-scr-esb-0704-2' into 'bcc/feature-scr'
feat: 新增ESB正式环境的配置

--story=118247257


TAPD: --story=118247257

--- a/docs/support-file/helm/templates/woaserver/configmap.yaml
+++ b/docs/support-file/helm/templates/woaserver/configmap.yaml
@@ -23,7 +23,7 @@ data:
       {{- include "common.tplvalues.render" (dict "value" (include "bk-hcm.databaseConfig" .) "context" $) | nindent 6 }}
     esb:
       endpoints:
-        - {{ .Values.bkComponentApiUrl }}
+        - {{ .Values.bkEsbApiUrl }}
       appCode: {{ .Values.appCode }}
       appSecret: {{ .Values.appSecret }}
       user: admin
