feat: v1.6.0版本 (merge request !1211)
Squash merge branch 'local-grey-bcc-feature-scr-0708-1' into 'bcc/feature-scr'
feat: v1.6.0版本

--story=118023962


TAPD: --story=118023962

--- a/docs/support-file/helm/templates/egress.yaml
+++ b/docs/support-file/helm/templates/egress.yaml
@@ -38,4 +38,9 @@ spec:
       protocol: TCP
       sport: 80
       service: api.process.tencent-cloud.com
+    - dport: 80
+      host: {{ .Values.egress.cl5Domain }} # cl5
+      protocol: TCP
+      sport: 80
+      service: {{ .Values.egress.cl5Domain }}
 {{- end }}
