--- a/docs/support-file/helm/Chart.yaml
+++ b/docs/support-file/helm/Chart.yaml
@@ -2,8 +2,8 @@ name: bk-hcm-oa
 apiVersion: v2
 description: A full stack chart for HCM Enterprise products.
 type: application
-version: 1.0.16-beta.1
-appVersion: 1.6.0-alpha.14
+version: 1.0.16-alpha.3
+appVersion: 1.6.0-alpha.15
 
 dependencies:
   - name: common
