feat: v1.6.0-alpha.17版本 (merge request !1217)
Squash merge branch 'local-bcc-scr-version-0709-3' into 'bcc/feature-scr'
feat: v1.6.0-alpha.17版本

--story=118023962


TAPD: --story=118023962

--- a/docs/support-file/helm/Chart.yaml
+++ b/docs/support-file/helm/Chart.yaml
@@ -2,8 +2,8 @@ name: bk-hcm-oa
 apiVersion: v2
 description: A full stack chart for HCM Enterprise products.
 type: application
-version: 1.0.16-beta.2
-appVersion: 1.6.0-alpha.16
+version: 1.0.16-alpha.17
+appVersion: 1.6.0-alpha.17
 
 dependencies:
   - name: common
