chore: 内部版增加account server chart配置 (merge request !1294)
Squash merge branch 'chart-account-server' into 'bcc/feature-scr'
chore: 内部版增加account server chart配置

--- a/docs/support-file/helm/templates/webserver/configmap.yaml
+++ b/docs/support-file/helm/templates/webserver/configmap.yaml
@@ -49,5 +49,7 @@ data:
       bkCmdbCreateBizDocsUrl: {{ .Values.bkCmdbCreateBizDocsUrl }}
       # 启用云选型
       enableCloudSelection: {{ .Values.enableCloudSelection }}
+      # 启用账单账号
+      enableAccountBill: {{ .Values.enableAccountBill }}
     itsm:
       {{- toYaml .Values.itsm | nindent 6 }}
