chore: 增加数据库limiter配置,taskServer 增加obsDatabase 配置, dataService 增加cos配置 (merge request !1295)
Squash merge branch 'chart-account-server' into 'bcc/feature-scr'
chore: 增加数据库limiter配置,taskServer 增加obsDatabase 配置, dataService 增加cos配置

rename: obs_database-> obsDatabase
cos 改为 小写驼峰

--- a/cmd/data-service/etc/data_service.yaml
+++ b/cmd/data-service/etc/data_service.yaml
@@ -135,3 +135,13 @@ esb:
     caFile:
     # the password to decrypt the certificate.
     password:
+
+# 对象存储配置
+objectstore:
+  type: tcloud
+  uin: 1234678
+  prefix: hcm
+  secretId: abcd
+  secretKey: efgh
+  bucketUrl: https://1234678.com
+  debug: false
