--- a/docs/support-file/helm/templates/taskserver/configmap.yaml
+++ b/docs/support-file/helm/templates/taskserver/configmap.yaml
@@ -23,5 +23,6 @@ data:
       {{- toYaml .Values.taskserver.log | nindent 6 }}
     async:
       {{- toYaml .Values.taskserver.async | nindent 6 }}
-
+    obsDatabase:
+      {{- toYaml .Values.taskserver.obsDatabase | nindent 6 }}
 
