--- a/docs/support-file/helm/templates/dataservice/configmap.yaml
+++ b/docs/support-file/helm/templates/dataservice/configmap.yaml
@@ -37,3 +37,5 @@ data:
       aesGcm:
         key: {{ .Values.crypto.aesGcm.key }}
         nonce: {{ .Values.crypto.aesGcm.nonce }}
+    objectstore：
+      {{- toYaml .Values.objectstore | nindent 6 }}
