chore: update secretId placeholder (merge request !1296)
Squash merge branch 'chart-account-server' into 'bcc/feature-scr'
chore: update secretId placeholder

--- a/cmd/data-service/etc/data_service.yaml
+++ b/cmd/data-service/etc/data_service.yaml
@@ -141,7 +141,7 @@ objectstore:
   type: tcloud
   uin: 1234678
   prefix: hcm
-  secretId: abcd
-  secretKey: efgh
+  secretId: xxxx
+  secretKey: xxxx
   bucketUrl: https://1234678.com
   debug: false
