fix: database limiter, account server finops/cmsi (merge request !1297)
Squash merge branch 'chart-account-server' into 'bcc/feature-scr'
fix: database limiter, account server finops/cmsi

--- a/docs/support-file/helm/templates/accountserver/configmap.yaml
+++ b/docs/support-file/helm/templates/accountserver/configmap.yaml
@@ -29,3 +29,7 @@ data:
       {{- toYaml .Values.accountserver.exchangeRate | nindent 6 }}
     obs:
       {{- toYaml .Values.accountserver.obs | nindent 6 }}
+    finops:
+      {{- toYaml .Values.finops | nindent 6 }}
+    cmsi:
+      {{- toYaml .Values.cmsi | nindent 6 }}
