--- a/docs/support-file/helm/Chart.yaml
+++ b/docs/support-file/helm/Chart.yaml
@@ -2,8 +2,8 @@ name: bk-hcm-oa
 apiVersion: v2
 description: A full stack chart for HCM Enterprise products.
 type: application
-version: 1.0.16-beta.8
-appVersion: 1.6.0-beta.8
+version: 1.0.16
+appVersion: 1.6.0.0
 
 dependencies:
   - name: common
