feat: 添加SCR回收物理机到BG资源池时自动回收外网IP的配置 (merge request !1382)
Squash merge branch 'local-bcc-integ-huishou-0722-2' into 'bcc/v1.6.x'

--story=118347349


TAPD: --story=118347349

--- a/docs/support-file/helm/templates/woaserver/configmap.yaml
+++ b/docs/support-file/helm/templates/woaserver/configmap.yaml
@@ -93,4 +93,4 @@ data:
         # the password to decrypt the certificate.
         password:
     blacklist: {{ .Values.blacklist }}
-
+    ngate: {{ .Values.ngate }}
