--- a/docs/support-file/helm/values.yaml
+++ b/docs/support-file/helm/values.yaml
@@ -990,3 +990,9 @@ objectstore:
   bucketName: bucket
   bucketRegion: ap-xxx
   isDebug: false
+
+# ngate回收外网IP的配置
+ngate:
+  host: https://1234678.com
+  app_code: xxxx
+  app_secret: xxxx
