--- a/docs/support-file/helm/templates/woaserver/configmap.yaml
+++ b/docs/support-file/helm/templates/woaserver/configmap.yaml
@@ -93,4 +93,5 @@ data:
         # the password to decrypt the certificate.
         password:
     blacklist: {{ .Values.blacklist }}
-    ngate: {{ .Values.ngate }}
+    ngate:
+      {{- toYaml .Values.ngate | nindent 6 }}
