fix: fix createItsmTicket, add redirect url. (merge request !1564)
Squash merge branch 'fix' into 'bcc/v1.6.x'
fix: fix createItsmTicket, add redirect url.

--- a/cmd/woa-server/etc/woa_server.yaml
+++ b/cmd/woa-server/etc/woa_server.yaml
@@ -278,6 +278,8 @@ itsmFlows:
         approver:
         approvalKey:
         remarkKey:
+    # itsm service redirect url
+    redirectUrlTemplate: https://bkhcm-example.com/xxx/detail?id=%d
 
 bkchat:
   host: http://bkchat.ied.com:8000
