--- a/docs/support-file/helm/Chart.yaml
+++ b/docs/support-file/helm/Chart.yaml
@@ -2,8 +2,8 @@ name: bk-hcm-oa
 apiVersion: v2
 description: A full stack chart for HCM Enterprise products.
 type: application
-version: 1.0.21
-appVersion: 1.6.8.2
+version: 1.0.22-alpha.1
+appVersion: 1.6.9.0-alpha.1
 dependencies:
   - name: common
     repository: https://charts.bitnami.com/bitnami
