--- a/docs/support-file/helm/values.yaml
+++ b/docs/support-file/helm/values.yaml
@@ -13,7 +13,7 @@ image:
   registry: docker-repo.bk.tencent.com/bk-hcm/oa-image
   pullPolicy: IfNotPresent
   pullSecrets: []
-  tag: 1.6.9.0-alpha.4
+  tag: 1.6.9.0
 
 serviceAccount:
   create: true
