feat: 支持多密钥调用自研云接口 (merge request !1589)
Squash merge branch 'bcc/feature-loadbalancer' into 'bcc/feature-loadbalancer'
feat: 支持多密钥调用自研云接口 --story=119588669

TAPD: --story=119588669

--- a/cmd/hc-service/etc/hc_service.yaml
+++ b/cmd/hc-service/etc/hc_service.yaml
@@ -22,6 +22,9 @@ esb:
     # the password to decrypt the certificate.
     password:
 
+ziyanSecrets:
+  - id: id # SecretId
+    key: key # SecretKey
 
 # defines all the network related options.
 network:
@@ -86,6 +89,7 @@ log:
   alsoToStdErr: false
   # log level.
   verbosity: 0
+
 sync:
   # 腾讯云负载均衡监听器同步并发数配置
   tcloudLblConcurrency: 3
