--- a/docs/support-file/helm/templates/hcservice/configmap.yaml
+++ b/docs/support-file/helm/templates/hcservice/configmap.yaml
@@ -31,4 +31,6 @@ data:
         keyFile:
         caFile:
         password:
+    ziyanSecrets:
+      {{- toYaml .Values.ziyanSecrets | nindent 6 }}
 
