--- a/docs/support-file/helm/templates/dataservice/configmap.yaml
+++ b/docs/support-file/helm/templates/dataservice/configmap.yaml
@@ -5,6 +5,8 @@ metadata:
   labels: {{- include "common.labels.standard" . | nindent 4 }}
 data:
   config.yaml: |-
+    obsDatabase:
+      {{- toYaml .Values.obsDatabase | nindent 6 }}
     network:
       bindIP:
       port: {{ .Values.dataservice.port}}
