--- a/docs/support-file/helm/templates/taskserver/configmap.yaml
+++ b/docs/support-file/helm/templates/taskserver/configmap.yaml
@@ -24,5 +24,5 @@ data:
     async:
       {{- toYaml .Values.taskserver.async | nindent 6 }}
     obsDatabase:
-      {{- toYaml .Values.taskserver.obsDatabase | nindent 6 }}
+      {{- toYaml .Values.obsDatabase | nindent 6 }}
 
