feat: 新增滚服账单及明细的同步和查询功能 (merge request !1623)
Squash merge branch 'bcc/feature-rolling' into 'bcc/feature-rolling'
feat: 新增滚服账单及明细的同步和查询功能

 



TAPD: --story=120247391
TAPD: --story=120247373

--- a/docs/support-file/helm/templates/woaserver/configmap.yaml
+++ b/docs/support-file/helm/templates/woaserver/configmap.yaml
@@ -97,3 +97,6 @@ data:
       {{- toYaml .Values.ngate | nindent 6 }}
     recover:
       {{- toYaml .Values.recover | nindent 6 }}
+    rollingServer:
+      syncBill: {{ .Values.rollingServer.syncBill }}
+
