--- a/docs/support-file/helm/Chart.yaml
+++ b/docs/support-file/helm/Chart.yaml
@@ -2,8 +2,8 @@ name: bk-hcm-oa
 apiVersion: v2
 description: A full stack chart for HCM Enterprise products.
 type: application
-version: 1.0.28
-appVersion: 1.6.11.1
+version: 1.0.29-alpha.1
+appVersion: 1.6.11.2-alpha.1
 dependencies:
   - name: common
     repository: https://charts.bitnami.com/bitnami
