feat: 主机任务管理 (merge request !1729)
--story=120579775

--- a/front/tsconfig.json
+++ b/front/tsconfig.json
@@ -4,6 +4,7 @@
     "strictPropertyInitialization": false,
     "allowSyntheticDefaultImports": true,
     "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
     "importHelpers": true,
     "resolveJsonModule": true,
     "allowJs": true,
