--- a/front/package.json
+++ b/front/package.json
@@ -48,7 +48,7 @@
     "@blueking/login-modal": "^1.0.1",
     "@blueking/notice-component": "^2.0.5",
     "@blueking/release-note": "^0.0.1-beta.17",
-    "@blueking/roll-request": "^1.0.0-alpha",
+    "@blueking/roll-request": "^1.0.2",
     "@types/lodash": "^4.14.182",
     "@types/qs": "^6.9.7",
     "@types/validator": "^13.12.0",
@@ -87,6 +87,7 @@
     "pinia": "^2.0.13",
     "postcss": "^8.4.31",
     "qs": "^6.13.0",
+    "reflect-metadata": "^0.2.2",
     "screenfull": "^6.0.2",
     "tiny-emitter": "^2.1.0",
     "tvision-color": "^1.4.0",
