feat: 支持clb业务下入口白名单配置 (merge request !1751)
Squash merge branch 'bcc/ziyan-clb-biz-whitelist' into 'bcc/feature-loadbalancer'
feat: 支持clb业务下入口白名单配置

--story=120749569 自研云-CLB-提供白名单灰度功能

 

TAPD: --story=120749569

--- a/docs/support-file/helm/values.yaml
+++ b/docs/support-file/helm/values.yaml
@@ -736,6 +736,8 @@ bkCmdbCreateBizDocsUrl: "http://cmdb.bk.com/docs"
 enableCloudSelection: true
 # 是否启用账单账号功能
 enableAccountBill: true
+# 自研云clb业务白名单，白名单内的业务会出现业务下clb页面入口, 填入字符串形式json数组
+ziyanClbBizWhitelist: "[]"
 
 ## 加密配置，Note: 首次部署后不可修改，否则数据将无法解密
 ##
