feat: 自研云-主机重装-MOA对接 --story=119231922 (merge request !1768)
Squash merge branch 'feat-bcc/feat-moa-check' into 'bcc/feature-cvm-operate'
feat: 自研云-主机重装-MOA对接 --story=119231922

 



TAPD: --story=119231922

--- a/docs/support-file/helm/templates/webserver/configmap.yaml
+++ b/docs/support-file/helm/templates/webserver/configmap.yaml
@@ -58,3 +58,5 @@ data:
     notice:
       {{- toYaml .Values.webserver.notice | nindent 6 }}
     templatePath: {{ .Values.webserver.templatePath }}
+    moa:
+      {{- toYaml .Values.webserver.moa | nindent 6 }}
