chore: v1.7.0.0-alpha.1 (merge request !1780)
Squash merge branch 'bcc/v1.7.0.0-alpha.1' into 'bcc/v1.7.x'
chore: v1.7.0.0-alpha.1

--- a/docs/support-file/helm/Chart.yaml
+++ b/docs/support-file/helm/Chart.yaml
@@ -2,8 +2,8 @@ name: bk-hcm-oa
 apiVersion: v2
 description: A full stack chart for HCM Enterprise products.
 type: application
-version: 1.0.29
-appVersion: 1.6.11.2
+version: 1.0.30
+appVersion: 1.7.0.0-alpha.1
 dependencies:
   - name: common
     repository: https://charts.bitnami.com/bitnami
