feat: 降低硬编码clb同步频率、修复自研云带宽包误调用公有云接口、补充cloud server cc APIGateway接口配置 (merge request !1789)
Squash merge branch 'bcc/fix-ziyan-use-tcloud' into 'bcc/v1.7.x'
feat: 降低硬编码clb同步频率、修复自研云带宽包误调用公有云接口、补充cloud server cc APIGateway接口配置

--story=120147417



TAPD: --story=120147417

--- a/docs/support-file/helm/templates/cloudserver/configmap.yaml
+++ b/docs/support-file/helm/templates/cloudserver/configmap.yaml
@@ -50,3 +50,5 @@ data:
       {{- toYaml .Values.finops | nindent 6 }}
     cloudSelection:
       {{- toYaml .Values.cloudserver.cloudSelection | nindent 6 }}
+    cmdb:
+      {{- toYaml .Values.cmdbApiGateway | nindent 6 }}
