feat: 自研云-主机重装更新cmdb状态 --story=120915060 (merge request !1793)
Squash merge branch 'feat-bcc/feat-cmdb-update' into 'bcc/feature-cvm-operate'
feat: 自研云-主机重装更新cmdb状态 --story=120915060

 



TAPD: --story=120915060

--- a/docs/support-file/helm/templates/taskserver/configmap.yaml
+++ b/docs/support-file/helm/templates/taskserver/configmap.yaml
@@ -25,4 +25,6 @@ data:
       {{- toYaml .Values.taskserver.async | nindent 6 }}
     obsDatabase:
       {{- toYaml .Values.obsDatabase | nindent 6 }}
+    cmdb:
+      {{- toYaml .Values.cmdbApiGateway | nindent 6 }}
 
