--- a/docs/support-file/helm/templates/webserver/configmap.yaml
+++ b/docs/support-file/helm/templates/webserver/configmap.yaml
@@ -51,7 +51,7 @@ data:
       enableCloudSelection: {{ .Values.enableCloudSelection }}
       # 启用账单账号
       enableAccountBill: {{ .Values.enableAccountBill }}
-      ZiyanClbBizWhitelist: {{ .Values.ziyanClbBizWhitelist }}
+      ziyanClbBizWhitelist: "{{ .Values.ziyanClbBizWhitelist }}"
     itsm:
       {{- toYaml .Values.itsm | nindent 6 }}
     changeLogPath:
