--- a/docs/support-file/helm/Chart.yaml
+++ b/docs/support-file/helm/Chart.yaml
@@ -2,8 +2,8 @@ name: bk-hcm-oa
 apiVersion: v2
 description: A full stack chart for HCM Enterprise products.
 type: application
-version: 1.0.30-alpha.2
-appVersion: 1.7.0.0-alpha.2
+version: 1.0.30
+appVersion: 1.7.0.0
 dependencies:
   - name: common
     repository: https://charts.bitnami.com/bitnami
