feat: 主机重装接入告警接口 --story=120552989 (merge request !1788)
Squash merge branch 'local-bcc-feature-scr-cvm-reset-1125-1' into 'bcc/feature-cvm-operate'
feat: 主机重装接入告警接口
--story=120552989


TAPD: --story=120552989

--- a/docs/support-file/helm/templates/taskserver/configmap.yaml
+++ b/docs/support-file/helm/templates/taskserver/configmap.yaml
@@ -27,4 +27,5 @@ data:
       {{- toYaml .Values.obsDatabase | nindent 6 }}
     cmdb:
       {{- toYaml .Values.cmdbApiGateway | nindent 6 }}
-
+    alarm:
+      {{- toYaml .Values.alarm | nindent 6 }}
