--- a/cmd/task-server/etc/task_server.yaml
+++ b/cmd/task-server/etc/task_server.yaml
@@ -50,9 +50,9 @@ database:
     # is a seed list of host:port addresses of database nodes.
     endpoints:
       - 127.0.0.1:3306
-    database: ***
-    user: ***
-    password: ***
+    database: xxx
+    user: xxx
+    password: xxx
     # DialTimeoutSec is timeout in seconds to wait for a response from the db server
     # all the timeout default value reference:
     # https://dev.mysql.com/doc/refman/8.0/en/server-system-variables.html.
@@ -196,3 +196,9 @@ cmdb:
     caFile:
     # the password to decrypt the certificate.
     password:
+
+# Alarm告警平台
+alarm:
+  host: http://127.0.0.1
+  app_code: xxxx
+  app_secret: xxxx
