--- a/front/package.json
+++ b/front/package.json
@@ -44,7 +44,7 @@
     "@blueking/babel-preset-bk": "^2.1.0-beta4",
     "@blueking/cli-service-webpack": "0.0.0-beta26",
     "@blueking/collapsible-tag": "^1.1.0-beta.4",
-    "@blueking/ediatable": "^0.0.1-beta.16",
+    "@blueking/ediatable": "^0.0.1-beta.19",
     "@blueking/login-modal": "^1.0.1",
     "@blueking/notice-component": "^2.0.5",
     "@blueking/release-note": "^0.0.1-beta.17",
@@ -73,7 +73,7 @@
     "helpful-decorators": "^2.1.0",
     "interactjs": "^1.10.17",
     "ipaddr.js": "^2.1.0",
-    "js-cookie": "^3.0.1",
+    "js-cookie": "^3.0.5",
     "js-watermarker": "^2.0.2",
     "less": "^4.2.0",
     "lodash": "^4.17.21",
@@ -115,6 +115,7 @@
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-conventional": "^17.0.3",
     "@types/cookie": "^0.5.1",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^18.0.0",
     "@vue/babel-plugin-jsx": "^1.1.1",
     "autoprefixer": "^10.4.7",
