feat: 主机申请审批可撤销节点配置化 (merge request !1831)
Squash merge branch 'feature/cancelItsmFlow' into 'bcc/v1.7.x'
feat: 主机申请审批可撤销节点配置化

 
 



TAPD: --story=121000907

--- a/cmd/woa-server/etc/woa_server.yaml
+++ b/cmd/woa-server/etc/woa_server.yaml
@@ -265,6 +265,15 @@ itsm:
     # the password to decrypt the certificate.
     password:
 
+# defines itsm flows which can be cancelled related configuration
+cancelItsmFlows:
+  # itsm service name
+  - serviceName: "资源申领流程"
+    # itsm state nodes
+    stateNodes:
+      - nodeName: "leader审批"
+      - nodeName: "管理员审批"
+
 # defines itsm flows related configuration
 itsmFlows:
   # itsm service name
