chore: 修正helm 模板 错误缩进 (merge request !1847)
Squash merge branch 'bcc/v1.7.x' into 'bcc/v1.7.x'
chore: 修正helm 模板 错误缩进

--- a/docs/support-file/helm/templates/cloudserver/deployment.yaml
+++ b/docs/support-file/helm/templates/cloudserver/deployment.yaml
@@ -24,15 +24,15 @@ spec:
       serviceAccountName: {{ template "bk-hcm.serviceAccountName" . }}
       {{- with .Values.cloudserver.nodeSelector }}
       nodeSelector:
-      {{ toYaml . | indent 8 }}
+      {{- toYaml . | nindent 8 }}
       {{- end }}
       {{- with .Values.cloudserver.affinity }}
       affinity:
-        {{ toYaml . | indent 8 }}
+        {{- toYaml . | nindent 8 }}
       {{- end }}
       {{- with .Values.cloudserver.tolerations }}
       tolerations:
-        {{ toYaml . | indent 8 }}
+        {{- toYaml . | nindent 8 }}
       {{- end }}
       {{- with .Values.image.pullSecrets }}
       imagePullSecrets:
