--- a/docs/support-file/helm/templates/dataservice/deployment.yaml
+++ b/docs/support-file/helm/templates/dataservice/deployment.yaml
@@ -24,15 +24,15 @@ spec:
       serviceAccountName: {{ template "bk-hcm.serviceAccountName" . }}
       {{- with .Values.dataservice.nodeSelector }}
       nodeSelector:
-      {{ toYaml . | indent 8 }}
+      {{- toYaml . | nindent 8 }}
       {{- end }}
       {{- with .Values.dataservice.affinity }}
       affinity:
-        {{ toYaml . | indent 8 }}
+        {{- toYaml . | nindent 8 }}
       {{- end }}
       {{- with .Values.dataservice.tolerations }}
       tolerations:
-        {{ toYaml . | indent 8 }}
+        {{- toYaml . | nindent 8 }}
       {{- end }}
       {{- with .Values.image.pullSecrets }}
       imagePullSecrets:
