feat: 机房裁撤支持组织搜索条件 (merge request !1913)
--story=121222049

--- a/front/package.json
+++ b/front/package.json
@@ -48,6 +48,7 @@
     "@blueking/ediatable": "^0.0.1-beta.19",
     "@blueking/login-modal": "^1.0.1",
     "@blueking/notice-component": "^2.0.5",
+    "@blueking/org-selector": "^0.0.6",
     "@blueking/release-note": "^0.0.1-beta.17",
     "@blueking/roll-request": "^1.0.2",
     "@types/lodash": "^4.14.182",
@@ -59,7 +60,7 @@
     "@wangeditor/editor-for-vue": "^5.1.12",
     "art-template": "^4.13.2",
     "axios": "^1.6.0",
-    "bkui-vue": "2.0.1-beta.29",
+    "bkui-vue": "2.0.1-beta.34",
     "classnames": "^2.3.1",
     "clipboard": "^2.0.11",
     "cookie": "^0.5.0",
