feat: 机房裁撤对接裁撤系统 (merge request !1899)
Squash merge branch 'bcc/v1.7.x' into 'bcc/v1.7.x'
TAPD: --story=121114307

--- a/cmd/woa-server/etc/woa_server.yaml
+++ b/cmd/woa-server/etc/woa_server.yaml
@@ -306,6 +306,9 @@ bkchat:
 
 resourceDissolve:
   originDate: "20240105"
+  projectNames:
+    - "2025机房裁撤"
+  syncDissolveHost: true
 
 elasticsearch:
   url: 127.0.0.1:9200
@@ -341,3 +344,7 @@ recover:
 rollingServer:
   syncBill: true
 
+caiche:
+  host: http://127.0.0.1
+  app_key: test
+  app_secret: test
