feat: 优化资源预测的列表展示、分campus主机申领、罚金推送控制配置 (merge request !1925)
Squash merge branch 'res-plan-fix' into 'bcc/v1.7.x'
feat: 增加配置控制是否启用罚金推送 --story=120684213

 



TAPD: --story=120684100
TAPD: --story=120684213

--- a/docs/support-file/helm/templates/woaserver/configmap.yaml
+++ b/docs/support-file/helm/templates/woaserver/configmap.yaml
@@ -103,3 +103,6 @@ data:
       syncBill: {{ .Values.rollingServer.syncBill }}
     caiche:
       {{- toYaml .Values.caiche | nindent 6 }}
+    resPlan:
+      reportPenaltyRatio: {{ .Values.resPlan.reportPenaltyRatio }}
+
