feat: 自研云-配置自动化同步(Vpc、子网、库存) --story=121156831 (merge request !1886)
Squash merge branch 'local-bcc-scr-tools-sync-1210-1' into 'bcc/v1.7.x'
feat: 自研云-配置自动化同步(Vpc、子网)
--story=121156831


TAPD: --story=121156831

--- a/cmd/woa-server/etc/woa_server.yaml
+++ b/cmd/woa-server/etc/woa_server.yaml
@@ -351,3 +351,10 @@ caiche:
 
 resPlan:
   reportPenaltyRatio: false
+
+# 开启自研云资源同步服务,单位:分钟
+resourceSync:
+  syncVpc: 30
+  syncSubnet: 30
+  syncCapacity: 360
+  syncLeftIP: 360
