--- a/docs/support-file/helm/templates/woaserver/configmap.yaml
+++ b/docs/support-file/helm/templates/woaserver/configmap.yaml
@@ -105,4 +105,5 @@ data:
       {{- toYaml .Values.caiche | nindent 6 }}
     resPlan:
       reportPenaltyRatio: {{ .Values.resPlan.reportPenaltyRatio }}
-
+    resourceSync:
+      {{- toYaml .Values.resourceSync | nindent 6 }}
