--- a/docs/support-file/helm/values.yaml
+++ b/docs/support-file/helm/values.yaml
@@ -1127,3 +1127,10 @@ alarm:
   host: http://12345678.com
   app_code: xxxx
   app_secret: xxxx
+
+# 开启自研云资源同步服务,单位:分钟
+resourceSync:
+  syncVpc: 30
+  syncSubnet: 30
+  syncCapacity: 360
+  syncLeftIP: 360
