docs: 更新默认Helm Chart配置 --story=120684213 (merge request !1937)
Squash merge branch 'values-fix' into 'bcc/v1.7.x'
docs: 更新默认Helm Chart配置 --story=120684213

 



TAPD: --story=120684213

--- a/docs/support-file/helm/templates/woaserver/configmap.yaml
+++ b/docs/support-file/helm/templates/woaserver/configmap.yaml
@@ -104,6 +104,6 @@ data:
     caiche:
       {{- toYaml .Values.caiche | nindent 6 }}
     resPlan:
-      reportPenaltyRatio: {{ .Values.resPlan.reportPenaltyRatio }}
+      {{- toYaml .Values.resPlan | nindent 6 }}
     resourceSync:
       {{- toYaml .Values.resourceSync | nindent 6 }}
