--- a/docs/support-file/helm/values.yaml
+++ b/docs/support-file/helm/values.yaml
@@ -13,7 +13,7 @@ image:
   registry: docker-repo.bk.tencent.com/bk-hcm/oa-image
   pullPolicy: IfNotPresent
   pullSecrets: []
-  tag: 1.7.1.2-alpha.1
+  tag: 1.7.1.2-alpha.2
 
 serviceAccount:
   create: true
@@ -1094,6 +1094,8 @@ ngate:
 
 rollingServer:
   syncBill: true
+resPlan:
+  reportPenaltyRatio: false
 # cmdb 配置
 cmdbApiGateway:
   # endpoints is a seed list of host:port addresses of cmdb api gateway nodes.
