feat: 主机回收-替换uwork新接口 --story=120419123 (merge request !1940)
Squash merge branch 'local-bcc-scr-uwork-api-1223-1' into 'bcc/v1.7.x'
feat: 主机回收-替换uwork新接口
--story=120419123


TAPD: --story=120419123

--- a/cmd/woa-server/etc/woa_server.yaml
+++ b/cmd/woa-server/etc/woa_server.yaml
@@ -193,8 +193,10 @@ erp:
 tmp:
   host: http://127.0.0.1
 
-uwork:
+xray:
   host: http://127.0.0.1
+  client_id: test
+  secret_key: test
 
 gcs:
   host: http://127.0.0.1
