--- a/docs/support-file/helm/values.yaml
+++ b/docs/support-file/helm/values.yaml
@@ -1096,6 +1096,7 @@ rollingServer:
   syncBill: true
 resPlan:
   reportPenaltyRatio: false
+
 # cmdb 配置
 cmdbApiGateway:
   # endpoints is a seed list of host:port addresses of cmdb api gateway nodes.
@@ -1142,3 +1143,31 @@ xray:
   host: http://127.0.0.1
   client_id: test
   secret_key: test
+
+# 安全平台的配置.
+sampwd:
+  # endpoints is a seed list of host:port addresses of api gateway nodes.
+  endpoints:
+    - http://demo.com
+  # appCode is the BlueKing app code of hcm to request api gateway.
+  appCode: xxxx
+  # appSecret is the BlueKing app secret of hcm to request api gateway.
+  appSecret: xxxxxxxxx
+  # user is the BlueKing user of hcm to request api gateway.
+  user: xxxx
+  # bkTicket is the BlueKing access ticket of hcm to request api gateway.
+  bkTicket:
+  # bkToken is the BlueKing access token of hcm to request api gateway.
+  bkToken: xxxxxxxxx
+  # defines tls related options.
+  tls:
+    # server should be accessed without verifying the TLS certificate.
+    insecureSkipVerify:
+    # server requires TLS client certificate authentication.
+    certFile:
+    # server requires TLS client certificate authentication.
+    keyFile:
+    # trusted root certificates for server.
+    caFile:
+    # the password to decrypt the certificate.
+    password:
