feat: 资源预测-资源到期通知 --story=121406228 (merge request !2010)
Squash merge branch 'resplan-expire-remind' into 'bcc/feature-plan'
feat: 资源预测-资源到期通知 --story=121406228

TAPD: --story=121406228

--- a/docs/support-file/helm/templates/woaserver/configmap.yaml
+++ b/docs/support-file/helm/templates/woaserver/configmap.yaml
@@ -33,6 +33,7 @@ data:
         keyFile:
         caFile:
         password:
+    bkHcmUrl: {{ .Values.bkHCMUrl }}
     useMongo: {{ .Values.useMongo }}
     mongodb:
       {{- toYaml .Values.mongodb | nindent 6 }}
@@ -70,6 +71,8 @@ data:
       {{- toYaml .Values.dvm | nindent 6 }}
     bkchat:
       {{- toYaml .Values.bkchat | nindent 6 }}
+    cmsi:
+      {{- toYaml .Values.cmsi | nindent 6 }}    
     itsm:
       {{- toYaml .Values.itsm | nindent 6 }}
     itsmFlows:
