feat: 资源预测-到期通知指定时区 --story=121406228 (merge request !2042)
Squash merge branch 'res-plan-notice' into 'bcc/v1.7.x'
feat: 资源预测-到期通知指定时区 --story=121406228

 



TAPD: --story=121406228

--- a/docs/support-file/helm/templates/woaserver/configmap.yaml
+++ b/docs/support-file/helm/templates/woaserver/configmap.yaml
@@ -106,6 +106,7 @@ data:
       syncBill: {{ .Values.rollingServer.syncBill }}
     caiche:
       {{- toYaml .Values.caiche | nindent 6 }}
+    localTimezone: {{ .Values.localTimezone }}
     resPlan:
       {{- toYaml .Values.resPlan | nindent 6 }}
     resourceSync:
