--- a/docs/support-file/helm/values.yaml
+++ b/docs/support-file/helm/values.yaml
@@ -13,7 +13,7 @@ image:
   registry: docker-repo.bk.tencent.com/bk-hcm/oa-image
   pullPolicy: IfNotPresent
   pullSecrets: []
-  tag: 1.7.3.1
+  tag: 1.7.3.2
 
 serviceAccount:
   create: true
@@ -1090,6 +1090,8 @@ ngate:
   host: https://1234678.com
   app_code: xxxx
   app_secret: xxxx
+
+localTimezone: "Asia/Shanghai"
 
 rollingServer:
   syncBill: true
