feat: 新增组织架构接口 --story=121954563 (merge request !2034)
Squash merge branch 'local-bcc-scr-cvm-dissolve-0217-1' into 'bcc/v1.7.x'
feat: 新增组织架构接口
--story=121954563

TAPD: --story=121954563

--- a/docs/support-file/helm/templates/cloudserver/configmap.yaml
+++ b/docs/support-file/helm/templates/cloudserver/configmap.yaml
@@ -52,3 +52,7 @@ data:
       {{- toYaml .Values.cloudserver.cloudSelection | nindent 6 }}
     cmdb:
       {{- toYaml .Values.cmdbApiGateway | nindent 6 }}
+    userMgr:
+      {{- toYaml .Values.userMgr | nindent 6 }}
+    orgTopoConfig:
+      {{- toYaml .Values.cloudserver.orgTopoConfig | nindent 6 }}
